--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/main_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,15 +19,57 @@
         />
 
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/main_bottom_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:minHeight="54dp"
-        >
+        android:minHeight="46dp"
+        android:background="@drawable/background_item_home_media"
+        android:visibility="gone">
 
-    </RelativeLayout>
+        <androidx.media3.ui.PlayerView
+            android:id="@+id/home_item_player_view"
+            android:layout_width="85dp"
+            android:layout_height="46dp"
+            android:layout_margin="6dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+            app:layout_constraintStart_toEndOf="@+id/home_item_player_view"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            >
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/home_item_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:textColor="@color/prune_500"
+                android:textSize="18sp"
+                android:fontFamily="@font/duplet_open_bold"
+                tools:text="Fever - Live"
+                />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/home_item_artist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:textColor="@color/prune_700"
+                android:textSize="17sp"
+                android:fontFamily="@font/duplet_open_semibold"
+                tools:text="Balthazar"
+                />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
