--- a/app/src/main/res/layout/view_item_home_media.xml
+++ b/app/src/main/res/layout/view_item_home_media.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,6 +12,15 @@
 
     <androidx.media3.ui.PlayerView
         android:id="@+id/home_item_player_view"
+        android:layout_width="85dp"
+        android:layout_height="46dp"
+        android:layout_margin="6dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/home_item_player_image_view"
         android:layout_width="85dp"
         android:layout_height="46dp"
         android:layout_margin="6dp"
